more CSS for days and weeks

--- a/src/components/day-component/day-component.html
+++ b/src/components/day-component/day-component.html
@@ -1,4 +1,7 @@
-<h4 class="day-name">{{dayName}}</h4>
-<journal-entry *ngFor="let entry of entries" [data]="entry"></journal-entry>
+<div class="day-component">
+  <h3 class="day-name">{{dayName}}</h3>
+  <journal-entry *ngFor="let entry of entries" [data]="entry"></journal-entry>
 
-<button ion-button secondary (click)="addEntry()">+</button>
+  <i class="fa fa-plus entry-in-a-day" (click)="addEntry()"></i>
+  <!--<button ion-button secondary (click)="addEntry()">+</button>-->
+</div>
