--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -17,6 +17,22 @@
 
 @import 'font-awesome';
 
+@font-face {
+  font-family: 'nexa_boldregular';
+  src: url('/assets/fonts/nexabold-webfont.woff2') format('woff2'),
+  url('/assets/fonts/nexabold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'nexa_lightregular';
+  src: url('/assets/fonts/nexalight-webfont.woff2') format('woff2'),
+  url('/assets/fonts/nexalight-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 .content .scroll-content, .content-md .scroll-content {
   margin-top: 150px !important;
 }
@@ -32,4 +48,8 @@ ion-header.header::after , ion-header.header-md::after {
 
 .content, .content-md {
   background-color: #F2F2E9;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family:"Roboto Condensed",Arial,sans-serif !important;
 }
