--- a/src/components/entry-config/entry-config.scss
+++ b/src/components/entry-config/entry-config.scss
@@ -4,12 +4,12 @@
 
 .entry-config {
   padding:25px;
-  background-color:#233142;
-  border: 1px solid #233142;
+  background-color:#3073b6;
+  border: 1px solid #3073b6;
 
 }
 .entry-config .item {
-  background-color:#233142;
+  background-color:#3073b6;
   color:white;
 }
 .entry-config h2 {
