few colors changed

--- a/src/components/entry-config/entry-config.scss
+++ b/src/components/entry-config/entry-config.scss
@@ -17,13 +17,13 @@
 }
 
 .entry-config .label {
-  color: #F95959;
+  color: white;
 }
 
 .button-danger {
-  background-color: #F95959;
+  background-color: #233142;
 }
 .button-ok {
-  background-color: #376593s;
+  background-color: #F95959;
 }
 
