--- a/src/components/entry-config/entry-config.html
+++ b/src/components/entry-config/entry-config.html
@@ -4,7 +4,7 @@
         <ion-list>
 
             <ion-item>
-                <ion-label color="primary" floating>Entry type</ion-label>
+                <ion-label color="light" floating>Entry type</ion-label>
                 <ion-select formControlName="type" okText="Okay" cancelText="Dismiss">
                     <ion-option *ngFor="let entryType of entryTypes; let i = index" [value]="entryType.id">
                         {{entryType.title}}
@@ -13,7 +13,7 @@
                 </ion-select>
             </ion-item>
             <ion-item>
-                <ion-label color="primary" floating>Entry name</ion-label>
+                <ion-label color="light" floating>Entry name</ion-label>
                 <ion-input type="text" formControlName="name"></ion-input>
             </ion-item>
             <div style="display:flex; justify-content: flex-end">
