calendar in month-page, some rework

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -57,3 +57,7 @@ h1, h2, h3, h4, h5, h6 {
 .header .toolbar .toolbar-title, .header .toolbar .bar-buttons .icon{
   color:white;
 }
+
+.monthview-container {
+  height: auto !important;
+}
