design of the month page

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -47,7 +47,7 @@ ion-header.header::after , ion-header.header-md::after {
 }
 
 .content, .content-md {
-  background-color: #F2F2E9;
+  background-color: #EEEEEE;
 }
 
 h1, h2, h3, h4, h5, h6 {
