--- a/src/components/entry-component/entry-component.scss
+++ b/src/components/entry-component/entry-component.scss
@@ -3,6 +3,10 @@
   padding-left:20px;
   font-size:18px;
   line-height:26px;
+
+}
+.entry-in-a-day i {
+  margin-right:15px;
 }
 
 i.entry-in-a-day {
