--- a/src/pages/month-page/month-page.scss
+++ b/src/pages/month-page/month-page.scss
@@ -1,3 +1,15 @@
 page-month-page {
 
 }
+
+.arrows-container {
+  .left,
+  .right {
+    font-size: 2em;
+  }
+  display: flex;
+  >* {
+    flex-grow: 1;
+    text-align: center;
+  }
+}
