--- a/src/pages/month-page/month-page.scss
+++ b/src/pages/month-page/month-page.scss
@@ -6,11 +6,12 @@ page-month-page {
   .left,
   .right {
     font-size: 2em;
+    color: #EEEEEE;
   }
   display: flex;
   >* {
     flex-grow: 1;
-    text-align: center;
+    //text-align: center;
   }
 }
 page-month-page .content {
@@ -36,7 +37,7 @@ td.monthview-primary-with-event {
 }
 
 .header .toolbar .back-button {
-  color: #3073b6;
+  color: #ffffff;
 }
 
 page-month-page table.monthview-datetable td{
@@ -53,13 +54,13 @@ page-month-page table.monthview-datetable {
 .month-wrapper {
   background-color:#F95959;
   color:white;
-  margin-top: -80px;
-  height:220px;
+  margin-top: -113px;
+  height:190px;
   display:flex;
   align-items: flex-end;
 }
 
 .month-header {
-    margin-top:50px;
+    margin-top:30px;
     margin-left:28px;
 }
