--- a/src/pages/week-page/week-page.scss
+++ b/src/pages/week-page/week-page.scss
@@ -13,11 +13,11 @@
   margin-top: -80px;
   height:220px;
   display:flex;
-  align-items: flex-end;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .week-header {
-  margin-top:50px;
   margin-left:28px;
 }
 
@@ -38,10 +38,11 @@
   .left,
   .right {
     font-size: 2em;
+    color: #EEEEEE;
   }
   display: flex;
   >* {
     flex-grow: 1;
-    text-align: center;
+    //text-align: center;
   }
 }
