default to weekpage, menu text color, date input style

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -61,3 +61,7 @@ h1, h2, h3, h4, h5, h6 {
 .monthview-container {
   height: auto !important;
 }
+
+body > ion-app > ng-component > ion-menu > div > ion-header > ion-toolbar > div.toolbar-content.toolbar-content-md > ion-title > div {
+  color: #000000 !important;
+}
