--- a/src/components/entry-config/entry-config.html
+++ b/src/components/entry-config/entry-config.html
@@ -1,5 +1,5 @@
 <div class="entry-config">
-  <h2>{{isEdit?"Edit":"New"}} entry</h2>
+  <h2>{{edit?"Edit":"New"}} entry</h2>
   <form [formGroup]="form" (submit)="save()">
     <ion-list>
 
@@ -17,7 +17,7 @@
         <ion-input type="text" formControlName="name"></ion-input>
       </ion-item>
       <ion-item *ngIf="edit">
-        <ion-label>Date</ion-label>
+        <ion-label  color="light" floating>Date</ion-label>
         <ion-datetime displayFormat="MM/DD/YYYY"
                       formControlName="date"
                       max="2020-31-12T06:48:43.201Z"
