--- a/src/components/entry-config/entry-config.html
+++ b/src/components/entry-config/entry-config.html
@@ -3,7 +3,7 @@
   <form [formGroup]="form" (submit)="save()">
     <ion-list>
 
-      <ion-item>
+      <ion-item *ngIf="!isJournalEntry">
         <ion-label color="light" floating>Entry type</ion-label>
         <ion-select formControlName="type" okText="Okay" cancelText="Dismiss">
           <ion-option *ngFor="let entryType of entryTypes; let i = index" [value]="entryType.id">
@@ -16,12 +16,19 @@
         <ion-label color="light" floating>Entry name</ion-label>
         <ion-input type="text" formControlName="name"></ion-input>
       </ion-item>
-      <ion-item *ngIf="edit">
+      <ion-item *ngIf="edit || isJournalEntry">
         <ion-label  color="light" floating>Date</ion-label>
         <ion-datetime displayFormat="MM/DD/YYYY"
                       formControlName="date"
                       max="2020-31-12T06:48:43.201Z"
         ></ion-datetime>
+      </ion-item>
+      <ion-item *ngIf="isJournalEntry">
+        <ion-label color="light" floating>Description</ion-label>
+        <ion-textarea
+          formControlName="description"
+        >
+        </ion-textarea>
       </ion-item>
       <div style="display:flex; justify-content: flex-end">
         <button ion-button class="button-danger" (click)="cancel($event)">Cancel</button>
